Team_QualquerToken/.antlr/MOCParser.java
// Generated from /Users/catiasantos/Documents/Code/CP/21018_Compilacao/Team_QualquerToken/MOC.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MOCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, DOUBLE=2, VOID=3, MAIN=4, READ=5, READC=6, READS=7, WRITE=8, WRITEC=9, 
		WRITEV=10, WRITES=11, IF=12, ELSE=13, WHILE=14, FOR=15, MAIS=16, MENOS=17, 
		MULT=18, DIV=19, MODULO=20, MENOR=21, MENORIGUAL=22, MAIOR=23, MAIORIGUAL=24, 
		IGUAL=25, DIFERENTE=26, E_LOGICO=27, OU_LOGICO=28, NAO=29, ATRIBUICAO=30, 
		VIRGULA=31, PONTOVIRG=32, ABRECOLCH=33, FECHACOLCH=34, ABRECHAVES=35, 
		FECHACHAVES=36, ABREPAR=37, FECHAPAR=38, RETURN=39, STRINGLITERAL=40, 
		COMENTARIO_BLOCK=41, COMENTARIO_LINE=42, NUM_REAL=43, NUMERO=44, IDENTIFICADOR=45, 
		ESPACO=46;
	public static final int
		RULE_programa = 0, RULE_prototipos = 1, RULE_corpo = 2, RULE_unidade = 3, 
		RULE_prototipo = 4, RULE_prototipoPrincipal = 5, RULE_funcaoPrincipal = 6, 
		RULE_funcao = 7, RULE_parametros = 8, RULE_parametro = 9, RULE_tipo = 10, 
		RULE_declaracao = 11, RULE_listaVariaveis = 12, RULE_variavel = 13, RULE_blocoArray = 14, 
		RULE_listaValores = 15, RULE_expressao = 16, RULE_expressaoOr = 17, RULE_expressaoAnd = 18, 
		RULE_expressaoEquality = 19, RULE_expressaoAdd = 20, RULE_expressaoMul = 21, 
		RULE_expressaoUnaria = 22, RULE_castExpr = 23, RULE_primary = 24, RULE_primaryRest = 25, 
		RULE_argumentos = 26, RULE_opRelacional = 27, RULE_chamadaFuncao = 28, 
		RULE_chamadaReads = 29, RULE_bloco = 30, RULE_instrucoes = 31, RULE_instrucao = 32, 
		RULE_instrucaoExpressao = 33, RULE_instrucaoEmparelhada = 34, RULE_instrucaoPorEmparelhar = 35, 
		RULE_outraInstrucao = 36, RULE_instrucaoWhile = 37, RULE_instrucaoFor = 38, 
		RULE_expressaoOuAtribuicao = 39, RULE_instrucaoEscrita = 40, RULE_instrucaoReturn = 41, 
		RULE_instrucaoAtribuicao = 42, RULE_argumentoString = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "prototipos", "corpo", "unidade", "prototipo", "prototipoPrincipal", 
			"funcaoPrincipal", "funcao", "parametros", "parametro", "tipo", "declaracao", 
			"listaVariaveis", "variavel", "blocoArray", "listaValores", "expressao", 
			"expressaoOr", "expressaoAnd", "expressaoEquality", "expressaoAdd", "expressaoMul", 
			"expressaoUnaria", "castExpr", "primary", "primaryRest", "argumentos", 
			"opRelacional", "chamadaFuncao", "chamadaReads", "bloco", "instrucoes", 
			"instrucao", "instrucaoExpressao", "instrucaoEmparelhada", "instrucaoPorEmparelhar", 
			"outraInstrucao", "instrucaoWhile", "instrucaoFor", "expressaoOuAtribuicao", 
			"instrucaoEscrita", "instrucaoReturn", "instrucaoAtribuicao", "argumentoString"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'int'", "'double'", "'void'", "'main'", "'read'", "'readc'", "'reads'", 
			"'write'", "'writec'", "'writev'", "'writes'", "'if'", "'else'", "'while'", 
			"'for'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", 
			"'=='", "'!='", "'&&'", "'||'", "'!'", "'='", "','", "';'", "'['", "']'", 
			"'{'", "'}'", "'('", "')'", "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT", "DOUBLE", "VOID", "MAIN", "READ", "READC", "READS", "WRITE", 
			"WRITEC", "WRITEV", "WRITES", "IF", "ELSE", "WHILE", "FOR", "MAIS", "MENOS", 
			"MULT", "DIV", "MODULO", "MENOR", "MENORIGUAL", "MAIOR", "MAIORIGUAL", 
			"IGUAL", "DIFERENTE", "E_LOGICO", "OU_LOGICO", "NAO", "ATRIBUICAO", "VIRGULA", 
			"PONTOVIRG", "ABRECOLCH", "FECHACOLCH", "ABRECHAVES", "FECHACHAVES", 
			"ABREPAR", "FECHAPAR", "RETURN", "STRINGLITERAL", "COMENTARIO_BLOCK", 
			"COMENTARIO_LINE", "NUM_REAL", "NUMERO", "IDENTIFICADOR", "ESPACO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MOC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MOCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public PrototiposContext prototipos() {
			return getRuleContext(PrototiposContext.class,0);
		}
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MOCParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			prototipos();
			setState(89);
			corpo();
			setState(90);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrototiposContext extends ParserRuleContext {
		public List<PrototipoPrincipalContext> prototipoPrincipal() {
			return getRuleContexts(PrototipoPrincipalContext.class);
		}
		public PrototipoPrincipalContext prototipoPrincipal(int i) {
			return getRuleContext(PrototipoPrincipalContext.class,i);
		}
		public List<PrototipoContext> prototipo() {
			return getRuleContexts(PrototipoContext.class);
		}
		public PrototipoContext prototipo(int i) {
			return getRuleContext(PrototipoContext.class,i);
		}
		public PrototiposContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prototipos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).enterPrototipos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).exitPrototipos(this);
		}
	}

	public final PrototiposContext prototipos() throws RecognitionException {
		PrototiposContext _localctx = new PrototiposContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prototipos);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(94);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(92);
						prototipo();
						}
						break;
					case 2:
						{
						setState(93);
						prototipoPrincipal();
						}
						break;
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(99);
			prototipoPrincipal();
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(102);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						setState(100);
						prototipo();
						}
						break;
					case 2:
						{
						setState(101);
						prototipoPrincipal();
						}
						break;
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CorpoContext extends ParserRuleContext {
		public FuncaoPrincipalContext funcaoPrincipal() {
			return getRuleContext(FuncaoPrincipalContext.class,0);
		}
		public List<UnidadeContext> unidade() {
			return getRuleContexts(UnidadeContext.class);
		}
		public UnidadeContext unidade(int i) {
			return getRuleContext(UnidadeContext.class,i);
		}
		public CorpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).enterCorpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).exitCorpo(this);
		}
	}

	public final CorpoContext corpo() throws RecognitionException {
		CorpoContext _localctx = new CorpoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_corpo);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(107);
					unidade();
					}
					} 
				}
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(113);
			funcaoPrincipal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnidadeContext extends ParserRuleContext {
		public FuncaoContext funcao() {
			return getRuleContext(FuncaoContext.class,0);
		}
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}
		public UnidadeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unidade; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).enterUnidade(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).exitUnidade(this);
		}
	}

	public final UnidadeContext unidade() throws RecognitionException {
		UnidadeContext _localctx = new UnidadeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unidade);
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				funcao();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				declaracao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrototipoContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(MOCParser.IDENTIFICADOR, 0); }
		public TerminalNode ABREPAR() { return getToken(MOCParser.ABREPAR, 0); }
		public TerminalNode FECHAPAR() { return getToken(MOCParser.FECHAPAR, 0); }
		public TerminalNode PONTOVIRG() { return getToken(MOCParser.PONTOVIRG, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public PrototipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prototipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).enterPrototipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).exitPrototipo(this);
		}
	}

	public final PrototipoContext prototipo() throws RecognitionException {
		PrototipoContext _localctx = new PrototipoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_prototipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			tipo();
			setState(120);
			match(IDENTIFICADOR);
			setState(121);
			match(ABREPAR);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14L) != 0)) {
				{
				setState(122);
				parametros();
				}
			}

			setState(125);
			match(FECHAPAR);
			setState(126);
			match(PONTOVIRG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrototipoPrincipalContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode MAIN() { return getToken(MOCParser.MAIN, 0); }
		public TerminalNode ABREPAR() { return getToken(MOCParser.ABREPAR, 0); }
		public TerminalNode FECHAPAR() { return getToken(MOCParser.FECHAPAR, 0); }
		public TerminalNode PONTOVIRG() { return getToken(MOCParser.PONTOVIRG, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public PrototipoPrincipalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prototipoPrincipal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).enterPrototipoPrincipal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).exitPrototipoPrincipal(this);
		}
	}

	public final PrototipoPrincipalContext prototipoPrincipal() throws RecognitionException {
		PrototipoPrincipalContext _localctx = new PrototipoPrincipalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_prototipoPrincipal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			tipo();
			setState(129);
			match(MAIN);
			setState(130);
			match(ABREPAR);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14L) != 0)) {
				{
				setState(131);
				parametros();
				}
			}

			setState(134);
			match(FECHAPAR);
			setState(135);
			match(PONTOVIRG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncaoPrincipalContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode MAIN() { return getToken(MOCParser.MAIN, 0); }
		public TerminalNode ABREPAR() { return getToken(MOCParser.ABREPAR, 0); }
		public TerminalNode FECHAPAR() { return getToken(MOCParser.FECHAPAR, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public FuncaoPrincipalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcaoPrincipal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).enterFuncaoPrincipal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOCListener ) ((MOCListener)listener).exitFuncaoPrincipal(this);
		}
	}

	public final FuncaoPrincipalContext funcaoPrincipal() throws RecognitionException {
		FuncaoPrincipalContext _localctx = new FuncaoPrincipalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcaoPrincipal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			tipo();
			setState(138);
			match(MAIN);
			setState(139);
			match(ABREPAR);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14L) != 0)) {
				{
				setState(140);
				parametros();
				}
			}
